include/generated/ffi_v.h

void BView_FillPolygon3(BView * self, const BPolygon * polygon, const BGradient * gradient);
void BView_FillPolygon4(BView * self, const BPoint * point_array, int32 num_points, const BGradient * gradient);
void BView_FillPolygon5(BView * self, const BPoint * point_array, int32 num_points, BRect* bounds, const BGradient * gradient);
void BView_FillTriangle2(BView * self, BPoint* point1, BPoint* point2, BPoint* point3, const BGradient * gradient);
void BView_FillTriangle3(BView * self, BPoint* point1, BPoint* point2, BPoint* point3, BRect* bounds, const BGradient * gradient);
void BView_FillRect1(BView * self, BRect* rect, const BGradient * gradient);
void BView_FillRegion1(BView * self, BRegion * rectegion, const BGradient * gradient);
void BView_InvertRect(BView * self, BRect* rect);
void BView_FillRoundRect1(BView * self, BRect* rect, float x_radius, float y_radius, const BGradient * gradient);
void BView_FillEllipse2(BView * self, BPoint* center, float x_radius, float y_radius, const BGradient * gradient);
void BView_FillEllipse3(BView * self, BRect* rect, const BGradient * gradient);
void BView_FillArc2(BView * self, BPoint* center, float x_radius, float y_radius, float start_angle, float arc_angle, const BGradient * gradient);
void BView_FillArc3(BView * self, BRect* rect, float start_angle, float arc_angle, const BGradient * gradient);
void BView_FillBezier1(BView * self, BPoint * control_points, const BGradient * gradient);
void BView_FillShape1(BView * self, BShape * shape, const BGradient * gradient);
void BView_CopyBits(BView * self, BRect* src, BRect* dst);
void BView_DrawBitmapAsync(BView * self, const BBitmap * a_bitmap, BRect* bitmap_rect, BRect* view_rect, uint32 options);
void BView_DrawBitmapAsync1(BView * self, const BBitmap * a_bitmap, BRect* bitmap_rect, BRect* view_rect);
void BView_DrawBitmapAsync2(BView * self, const BBitmap * a_bitmap, BRect* view_rect);
void BView_DrawBitmapAsync3(BView * self, const BBitmap * a_bitmap, BPoint* where_);
void BView_DrawBitmapAsync4(BView * self, const BBitmap * a_bitmap);
void BView_DrawBitmap(BView * self, const BBitmap * a_bitmap, BRect* bitmap_rect, BRect* view_rect, uint32 options);
void BView_DrawBitmap1(BView * self, const BBitmap * a_bitmap, BRect* bitmap_rect, BRect* view_rect);
void BView_DrawBitmap2(BView * self, const BBitmap * a_bitmap, BRect* view_rect);
void BView_DrawBitmap3(BView * self, const BBitmap * a_bitmap, BPoint* where_);
void BView_DrawBitmap4(BView * self, const BBitmap * a_bitmap);
void BView_DrawTiledBitmapAsync(BView * self, const BBitmap * a_bitmap, BRect* view_rect, BPoint* phase);
void BView_DrawTiledBitmap(BView * self, const BBitmap * a_bitmap, BRect* view_rect, BPoint* phase);
void BView_DrawChar(BView * self, char a_char);
void BView_DrawChar1(BView * self, char a_char, BPoint* location);
void BView_DrawString(BView * self, const char * string, escapement_delta * delta);
void BView_DrawString2(BView * self, const char * string, int32 length, escapement_delta * delta);
void BView_DrawString4(BView * self, const char * string, const BPoint * locations, int32 location_count);
void BView_DrawString5(BView * self, const char * string, int32 length, const BPoint * locations, int32 location_count);
void BView_Invalidate(BView * self, BRect* inval_rect);
void BView_Invalidate1(BView * self, const BRegion * inval_region);
void BView_Invalidate2(BView * self);
void BView_DelayedInvalidate(BView * self, bigtime_t delay);
void BView_DelayedInvalidate1(BView * self, bigtime_t delay, BRect* inval_rect);
void BView_SetDiskMode(BView * self, char * filename, long offset);
void BView_BeginPicture(BView * self, BPicture * a_picture);
void BView_AppendToPicture(BView * self, BPicture * a_picture);
BPicture * BView_EndPicture(BView * self);
void BView_DrawPicture(BView * self, const BPicture * a_picture);
void BView_DrawPicture1(BView * self, const BPicture * a_picture, BPoint* where_);
void BView_DrawPicture2(BView * self, const char * filename, long offset, BPoint* where_);
void BView_DrawPictureAsync(BView * self, const BPicture * a_picture);
void BView_DrawPictureAsync1(BView * self, const BPicture * a_picture, BPoint* where_);
void BView_DrawPictureAsync2(BView * self, const char * filename, long offset, BPoint* where_);
void BView_BeginLayer(BView * self, uint8 opacity);
void BView_EndLayer(BView * self);
void BView_MoveBy(BView * self, float dh, float dv);
void BView_MoveTo(BView * self, BPoint* where_);
void BView_MoveTo1(BView * self, float x, float y);
void BView_ResizeBy(BView * self, float dh, float dv);
void BView_ResizeTo(BView * self, float width, float height);
void BView_ResizeTo1(BView * self, BSize* size);
BSize *BView_MinSize(BView * self);
BSize *BView_MaxSize(BView * self);
BSize *BView_PreferredSize(BView * self);
void BView_SetExplicitMinSize(BView * self, BSize* size);
void BView_SetExplicitMaxSize(BView * self, BSize* size);
void BView_SetExplicitPreferredSize(BView * self, BSize* size);
void BView_SetExplicitSize(BView * self, BSize* size);
BSize *BView_ExplicitMinSize(const BView * self);
BSize *BView_ExplicitMaxSize(const BView * self);
BSize *BView_ExplicitPreferredSize(const BView * self);
bool BView_HasHeightForWidth(BView * self);
void BView_GetHeightForWidth(BView * self, float width, float * min, float * max, float * preferred);
void BView_InvalidateLayout(BView * self, bool descendants);
void BView_SetLayout(BView * self, BLayout * layout);