src/generated/ffi_v.rs

    // NOT_SUPPORTED: pub fn BView_StrokePolygon(self_: *mut c_void, polygon: *const c_void, closed: bool, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_StrokePolygon1(self_: *mut c_void, point_array: *const c_void, num_points: i32, closed: bool, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_StrokePolygon2(self_: *mut c_void, point_array: *const c_void, num_points: i32, bounds: *mut c_void, closed: bool, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillPolygon(self_: *mut c_void, polygon: *const c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillPolygon1(self_: *mut c_void, point_array: *const c_void, num_points: i32, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillPolygon2(self_: *mut c_void, point_array: *const c_void, num_points: i32, bounds: *mut c_void, pattern: ::pattern);
    pub fn BView_FillPolygon3(self_: *mut c_void, polygon: *const c_void, gradient: *const c_void);
    pub fn BView_FillPolygon4(
        self_: *mut c_void,
        point_array: *const c_void,
        num_points: i32,
        gradient: *const c_void,
    );
    pub fn BView_FillPolygon5(
        self_: *mut c_void,
        point_array: *const c_void,
        num_points: i32,
        bounds: *mut c_void,
        gradient: *const c_void,
    );
    // NOT_SUPPORTED: pub fn BView_StrokeTriangle(self_: *mut c_void, point1: *mut c_void, point2: *mut c_void, point3: *mut c_void, bounds: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_StrokeTriangle1(self_: *mut c_void, point1: *mut c_void, point2: *mut c_void, point3: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillTriangle(self_: *mut c_void, point1: *mut c_void, point2: *mut c_void, point3: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillTriangle1(self_: *mut c_void, point1: *mut c_void, point2: *mut c_void, point3: *mut c_void, bounds: *mut c_void, pattern: ::pattern);
    pub fn BView_FillTriangle2(
        self_: *mut c_void,
        point1: *mut c_void,
        point2: *mut c_void,
        point3: *mut c_void,
        gradient: *const c_void,
    );
    pub fn BView_FillTriangle3(
        self_: *mut c_void,
        point1: *mut c_void,
        point2: *mut c_void,
        point3: *mut c_void,
        bounds: *mut c_void,
        gradient: *const c_void,
    );
    // NOT_SUPPORTED: pub fn BView_StrokeRect(self_: *mut c_void, rect: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillRect(self_: *mut c_void, rect: *mut c_void, pattern: ::pattern);
    pub fn BView_FillRect1(self_: *mut c_void, rect: *mut c_void, gradient: *const c_void);
    // NOT_SUPPORTED: pub fn BView_FillRegion(self_: *mut c_void, rectegion: *mut c_void, pattern: ::pattern);
    pub fn BView_FillRegion1(self_: *mut c_void, rectegion: *mut c_void, gradient: *const c_void);
    pub fn BView_InvertRect(self_: *mut c_void, rect: *mut c_void);
    // NOT_SUPPORTED: pub fn BView_StrokeRoundRect(self_: *mut c_void, rect: *mut c_void, x_radius: c_float, y_radius: c_float, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillRoundRect(self_: *mut c_void, rect: *mut c_void, x_radius: c_float, y_radius: c_float, pattern: ::pattern);
    pub fn BView_FillRoundRect1(
        self_: *mut c_void,
        rect: *mut c_void,
        x_radius: c_float,
        y_radius: c_float,
        gradient: *const c_void,
    );
    // NOT_SUPPORTED: pub fn BView_StrokeEllipse(self_: *mut c_void, center: *mut c_void, x_radius: c_float, y_radius: c_float, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_StrokeEllipse1(self_: *mut c_void, rect: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillEllipse(self_: *mut c_void, center: *mut c_void, x_radius: c_float, y_radius: c_float, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillEllipse1(self_: *mut c_void, rect: *mut c_void, pattern: ::pattern);
    pub fn BView_FillEllipse2(
        self_: *mut c_void,
        center: *mut c_void,
        x_radius: c_float,
        y_radius: c_float,
        gradient: *const c_void,
    );
    pub fn BView_FillEllipse3(self_: *mut c_void, rect: *mut c_void, gradient: *const c_void);
    // NOT_SUPPORTED: pub fn BView_StrokeArc(self_: *mut c_void, center: *mut c_void, x_radius: c_float, y_radius: c_float, start_angle: c_float, arc_angle: c_float, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_StrokeArc1(self_: *mut c_void, rect: *mut c_void, start_angle: c_float, arc_angle: c_float, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillArc(self_: *mut c_void, center: *mut c_void, x_radius: c_float, y_radius: c_float, start_angle: c_float, arc_angle: c_float, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillArc1(self_: *mut c_void, rect: *mut c_void, start_angle: c_float, arc_angle: c_float, pattern: ::pattern);
    pub fn BView_FillArc2(
        self_: *mut c_void,
        center: *mut c_void,
        x_radius: c_float,
        y_radius: c_float,
        start_angle: c_float,
        arc_angle: c_float,
        gradient: *const c_void,
    );
    pub fn BView_FillArc3(
        self_: *mut c_void,
        rect: *mut c_void,
        start_angle: c_float,
        arc_angle: c_float,
        gradient: *const c_void,
    );
    // NOT_SUPPORTED: pub fn BView_StrokeBezier(self_: *mut c_void, control_points: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillBezier(self_: *mut c_void, control_points: *mut c_void, pattern: ::pattern);
    pub fn BView_FillBezier1(
        self_: *mut c_void,
        control_points: *mut c_void,
        gradient: *const c_void,
    );
    // NOT_SUPPORTED: pub fn BView_StrokeShape(self_: *mut c_void, shape: *mut c_void, pattern: ::pattern);
    // NOT_SUPPORTED: pub fn BView_FillShape(self_: *mut c_void, shape: *mut c_void, pattern: ::pattern);
    pub fn BView_FillShape1(self_: *mut c_void, shape: *mut c_void, gradient: *const c_void);
    pub fn BView_CopyBits(self_: *mut c_void, src: *mut c_void, dst: *mut c_void);
    pub fn BView_DrawBitmapAsync(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        bitmap_rect: *mut c_void,
        view_rect: *mut c_void,
        options: u32,
    );
    pub fn BView_DrawBitmapAsync1(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        bitmap_rect: *mut c_void,
        view_rect: *mut c_void,
    );
    pub fn BView_DrawBitmapAsync2(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        view_rect: *mut c_void,
    );
    pub fn BView_DrawBitmapAsync3(self_: *mut c_void, a_bitmap: *const c_void, where_: *mut c_void);
    pub fn BView_DrawBitmapAsync4(self_: *mut c_void, a_bitmap: *const c_void);
    pub fn BView_DrawBitmap(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        bitmap_rect: *mut c_void,
        view_rect: *mut c_void,
        options: u32,
    );
    pub fn BView_DrawBitmap1(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        bitmap_rect: *mut c_void,
        view_rect: *mut c_void,
    );
    pub fn BView_DrawBitmap2(self_: *mut c_void, a_bitmap: *const c_void, view_rect: *mut c_void);
    pub fn BView_DrawBitmap3(self_: *mut c_void, a_bitmap: *const c_void, where_: *mut c_void);
    pub fn BView_DrawBitmap4(self_: *mut c_void, a_bitmap: *const c_void);
    pub fn BView_DrawTiledBitmapAsync(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        view_rect: *mut c_void,
        phase: *mut c_void,
    );
    pub fn BView_DrawTiledBitmap(
        self_: *mut c_void,
        a_bitmap: *const c_void,
        view_rect: *mut c_void,
        phase: *mut c_void,
    );
    pub fn BView_DrawChar(self_: *mut c_void, a_char: c_char);
    pub fn BView_DrawChar1(self_: *mut c_void, a_char: c_char, location: *mut c_void);
    pub fn BView_DrawString(self_: *mut c_void, string: *const c_char, delta: *mut c_void);
    // BLOCKED: pub fn BView_DrawString1(self_: *mut c_void, string: *const c_char, location: *mut c_void, delta: *mut c_void);
    pub fn BView_DrawString2(
        self_: *mut c_void,
        string: *const c_char,
        length: i32,
        delta: *mut c_void,
    );
    // BLOCKED: pub fn BView_DrawString3(self_: *mut c_void, string: *const c_char, length: i32, location: *mut c_void, delta: *mut c_void);
    pub fn BView_DrawString4(
        self_: *mut c_void,
        string: *const c_char,
        locations: *const c_void,
        location_count: i32,
    );
    pub fn BView_DrawString5(
        self_: *mut c_void,
        string: *const c_char,
        length: i32,
        locations: *const c_void,
        location_count: i32,
    );
    pub fn BView_Invalidate(self_: *mut c_void, inval_rect: *mut c_void);
    pub fn BView_Invalidate1(self_: *mut c_void, inval_region: *const c_void);
    pub fn BView_Invalidate2(self_: *mut c_void);
    pub fn BView_DelayedInvalidate(self_: *mut c_void, delay: bigtime_t);
    pub fn BView_DelayedInvalidate1(self_: *mut c_void, delay: bigtime_t, inval_rect: *mut c_void);
    pub fn BView_SetDiskMode(self_: *mut c_void, filename: *mut c_void, offset: c_long);
    pub fn BView_BeginPicture(self_: *mut c_void, a_picture: *mut c_void);
    pub fn BView_AppendToPicture(self_: *mut c_void, a_picture: *mut c_void);
    pub fn BView_EndPicture(self_: *mut c_void) -> *mut c_void;
    pub fn BView_DrawPicture(self_: *mut c_void, a_picture: *const c_void);
    pub fn BView_DrawPicture1(self_: *mut c_void, a_picture: *const c_void, where_: *mut c_void);
    pub fn BView_DrawPicture2(
        self_: *mut c_void,
        filename: *const c_char,
        offset: c_long,
        where_: *mut c_void,
    );
    pub fn BView_DrawPictureAsync(self_: *mut c_void, a_picture: *const c_void);
    pub fn BView_DrawPictureAsync1(
        self_: *mut c_void,
        a_picture: *const c_void,
        where_: *mut c_void,
    );
    pub fn BView_DrawPictureAsync2(
        self_: *mut c_void,
        filename: *const c_char,
        offset: c_long,
        where_: *mut c_void,
    );
    pub fn BView_BeginLayer(self_: *mut c_void, opacity: u8);
    pub fn BView_EndLayer(self_: *mut c_void);
    pub fn BView_MoveBy(self_: *mut c_void, dh: c_float, dv: c_float);
    pub fn BView_MoveTo(self_: *mut c_void, where_: *mut c_void);
    pub fn BView_MoveTo1(self_: *mut c_void, x: c_float, y: c_float);
    pub fn BView_ResizeBy(self_: *mut c_void, dh: c_float, dv: c_float);
    pub fn BView_ResizeTo(self_: *mut c_void, width: c_float, height: c_float);
    pub fn BView_ResizeTo1(self_: *mut c_void, size: *mut c_void);
    pub fn BView_MinSize(self_: *mut c_void) -> *mut c_void;
    pub fn BView_MaxSize(self_: *mut c_void) -> *mut c_void;
    pub fn BView_PreferredSize(self_: *mut c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn BView_LayoutAlignment(self_: *mut c_void) -> BAlignment;
    pub fn BView_SetExplicitMinSize(self_: *mut c_void, size: *mut c_void);
    pub fn BView_SetExplicitMaxSize(self_: *mut c_void, size: *mut c_void);
    pub fn BView_SetExplicitPreferredSize(self_: *mut c_void, size: *mut c_void);
    pub fn BView_SetExplicitSize(self_: *mut c_void, size: *mut c_void);
    // NOT_SUPPORTED: pub fn BView_SetExplicitAlignment(self_: *mut c_void, alignment: BAlignment);
    pub fn BView_ExplicitMinSize(self_: *const c_void) -> *mut c_void;
    pub fn BView_ExplicitMaxSize(self_: *const c_void) -> *mut c_void;
    pub fn BView_ExplicitPreferredSize(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn BView_ExplicitAlignment(self_: *const c_void) -> BAlignment;
    pub fn BView_HasHeightForWidth(self_: *mut c_void) -> bool;
    pub fn BView_GetHeightForWidth(
        self_: *mut c_void,
        width: c_float,
        min: *mut c_void,
        max: *mut c_void,
        preferred: *mut c_void,
    );
    pub fn BView_InvalidateLayout(self_: *mut c_void, descendants: bool);
    pub fn BView_SetLayout(self_: *mut c_void, layout: *mut c_void);
